--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,17 +3,17 @@ server:
 #jdbc
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ccc?serverTimezone=UTC&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/student?serverTimezone=UTC&characterEncoding=utf-8
     username: root
     password: root
 #mysql
-#spring.datasource.type: com.alibaba.druid.pool.DruidDataSource
-  #mybatis:
-  #type-aliases-package: com.whut.dao
+
+#mybatis:
+  #type-aliases-package: com.qhit.demo.pojo
   mybatis.config-location=classpath: /mybatis-config.xml
 
-
-  #视图层控制
+#
+#视图层控制
   spring.mvc.view.prefix: classpath:/templates/
   spring.mvc.view.suffix: .html
   spring.mvc.static-path-pattern: /static/**
